#168 - Anpassungen vom GlobalExceptionHandler und create-artist.component